v3.9.0 (XXXX-XX-XX)
-------------------

* Fixed BTS-611: In some cases AQL queries, in particular in a cluster, reported
  the wrong fullCount when the optimizer rule(s)`late-document-materialization`
  and/or `sort-limit` were active.

* Fix BTS-535: TakeoverShardLeadership waits properly for Current data in
  ClusterInfo. This avoids a fake warning and fake test failure.

* Fix potential read inconsistency for single document operations.
  When reading a single document that is concurrently being updated or replaced,
  the read operation could erroneously return a "document not found" error
  although the document actually existed. This only happened for single document
  operations, i.e., no transactions or AQL queries.

* APM-256: make arangoexport escape potential formulae in CSV exports.
  This addresses a potential security issue when exporting specially crafted
  documents to CSV, opening the CSV file in MS Excel or OpenOffice and then
  clicking links in any of the tainted cells.
  
  This change also adds a new option `--escape-csv-formulae` to toggle the
  escaping behavior for potential formulae values. The option is turned on by
  default.

* Second step of hotbackup transfer job cleanup. Now locks are also cleaned up
  as well as old, seemingly unfinished jobs.

* Fix GitHub issue #15084. Fixed a potential use-after-free on Windows for
  queries that used the NeighborsEnumerator (though other PathEnumerators
  might have been affected as well).

* BTS-624: The `move-calculations-up` optimization rule is now also applied to
  subqueries, when they don't have dependencies on the outer nodes, don't have
  modification nodes and don't read their own writes. This fixed the execution
  of a query without the splicing-subqueries option being faster than the
  execution of a query with this option (after version 3.8, this option cannot
  be switched off). 

* Added the following metrics for revision trees: