@@ -1,6 +1,9 @@
 v3.9.0 (XXXX-XX-XX)
 -------------------
 
+* Improve visibility in case of potential data corruption between primary index
+  and actual document store in documents column family.
+
 * Fixed BTS-611: In some cases AQL queries, in particular in a cluster, reported
   the wrong fullCount when the optimizer rule(s)`late-document-materialization`
   and/or `sort-limit` were active.
